--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2064,6 +2064,7 @@ Run =M-x= ~koek-sly/fix-install~ and restart Emacs.
        ("C-c d C-j" . devdocs-lookup-jquery)
        ("C-c d C-l" . devdocs-lookup-lodash~4)
        ("C-c d C-n" . devdocs-lookup-node)
+       ("C-c d C-p" . devdocs-lookup-npm)
        ("C-c d C-x" . devdocs-lookup-express)))
 
     ;; Resolve keybinding conflict with eglot
