--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1375,30 +1375,16 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
 On [[https://devdocs.io/][DevDocs]], enable:
 
-- C
-- C++
-- Clojure
-- CSS
-- DOM
-- DOM Events
-- Erlang
-- Express
-- HTML
-- JavaScript
-- jQuery
-- lodash
-- Matplotlib
-- Node.js
-- npm
-- NumPy
-- Octave
-- OpenJDK
-- pandas
-- PostgreSQL
-- Python
-- scikit-image
-- scikit-learn
-- StatsModels
+- C family: C, C++ and OpenJDK
+- Clojure & ClojureScript: Clojure
+- Erlang: Erlang
+- HTML & CSS: HTML and CSS
+- JavaScript: JavaScript, DOM, DOM Events, jQuery, lodash, Node.js,
+  npm and Express
+- Octave: Octave
+- Python: Python, NumPy, pandas, StatsModels, scikit-learn,
+  scikit-image and Matplotlib
+- SQL: PostgreSQL
 
 #+BEGIN_SRC emacs-lisp
   (use-package devdocs-lookup
@@ -2427,12 +2413,12 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
       :bind
       (:map python-mode-map
        ("C-c d d" . devdocs-lookup-python~3.7)
-       ("C-c d C-i" . devdocs-lookup-scikit_image)
-       ("C-c d C-l" . devdocs-lookup-scikit_learn)
-       ("C-c d C-m" . devdocs-lookup-matplotlib~3.1)
        ("C-c d C-n" . devdocs-lookup-numpy~1.17)
        ("C-c d C-p" . devdocs-lookup-pandas~0.25)
-       ("C-c d C-s" . devdocs-lookup-statsmodels)))
+       ("C-c d C-s" . devdocs-lookup-statsmodels)
+       ("C-c d C-l" . devdocs-lookup-scikit_learn)
+       ("C-c d C-i" . devdocs-lookup-scikit_image)
+       ("C-c d C-m" . devdocs-lookup-matplotlib~3.1)))
 
     (add-hook 'python-mode-hook #'koek-py/disable-checker)
     :delight (python-mode "Py" :major))
