--- a/README.org
+++ b/README.org
@@ -23,23 +23,18 @@ Finally, copy the dotfiles to your home directory.
     - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
   - E-mail client:
     - [[https://www.djcbsoftware.nl/code/mu/][mu]] and [[http://isync.sourceforge.net/][isync]]
-  - News reader:
-    - [[https://curl.haxx.se/][curl]]
+  - News reader: [[https://curl.haxx.se/][curl]]
   - PDF viewer:
     - [[https://poppler.freedesktop.org/][poppler]], [[http://www.libpng.org/][libpng]], [[https://www.zlib.net/][zlib]] and [[https://imagemagick.org/][ImageMagick]]
-  - Arduino (depends on C family):
-    - [[https://www.arduino.cc/en/Main/Software][Arduino IDE]]
+  - Arduino (depends on C family): [[https://www.arduino.cc/en/Main/Software][Arduino IDE]]
   - C family:
     - [[https://gcc.gnu.org/][GCC]]
     - [[https://clang.llvm.org/][Clang]]
     - [[https://mesonbuild.com/][Meson]]
     - [[https://www.gnu.org/software/gdb/][GDB]]
-  - Clojure & ClojureScript (depends on Java and JavaScript):
-    - [[https://leiningen.org/][Leiningen]]
-  - Common Lisp:
-    - [[http://www.sbcl.org/][Steel Bank Common Lisp]]
-  - Erlang:
-    - [[https://www.erlang.org/][Erlang/OTP]]
+  - Clojure & ClojureScript (depends on Java and JavaScript): [[https://leiningen.org/][Leiningen]]
+  - Common Lisp: [[http://www.sbcl.org/][Steel Bank Common Lisp]]
+  - Erlang: [[https://www.erlang.org/][Erlang/OTP]]
   - HTML & CSS:
     - [[https://github.com/vscode-langservers/vscode-html-languageserver-bin][vscode-html-languageserver-bin]] and [[https://github.com/vscode-langservers/vscode-css-languageserver-bin][vscode-css-languageserver-bin]]
     - [[http://www.html-tidy.org/][HTML Tidy]]
@@ -52,26 +47,19 @@ Finally, copy the dotfiles to your home directory.
     - [[https://www.chromium.org/][Chromium]]
     - [[https://github.com/sourcegraph/javascript-typescript-langserver][javascript-typescript-langserver]]
     - [[https://github.com/NicolasPetton/Indium][Indium]]
-  - JSON:
-    - [[https://github.com/vscode-langservers/vscode-json-languageserver-bin][vscode-json-languageserver-bin]]
-  - Octave & MATLAB:
-    - [[https://www.gnu.org/software/octave/][Octave]]
-  - OpenSCAD:
-    - [[https://www.openscad.org/][OpenSCAD]]
+  - JSON: [[https://github.com/vscode-langservers/vscode-json-languageserver-bin][vscode-json-languageserver-bin]]
+  - Octave & MATLAB: [[https://www.gnu.org/software/octave/][Octave]]
+  - OpenSCAD: [[https://www.openscad.org/][OpenSCAD]]
   - Python:
     - [[https://www.python.org/][Python]]
     - [[https://github.com/palantir/python-language-server][Python Language Server]]
-  - Scheme:
-    - [[https://www.gnu.org/software/guile/][Guile]]
-  - SQL:
-    - [[https://www.postgresql.org/][PostgreSQL]]
+  - Scheme: [[https://www.gnu.org/software/guile/][Guile]]
+  - SQL: [[https://www.postgresql.org/][PostgreSQL]]
   - TeX, Org & Markdown:
     - [[https://www.latex-project.org/][LaTeX]]
     - [[https://pandoc.org/][pandoc]]
-  - Wolfram Language:
-    - [[https://www.wolfram.com/mathematica/][Mathematica]]
-- GNOME Shell:
-  - [[https://github.com/prurigro/gnome-catgen][gnome-catgen]]
+  - Wolfram Language: [[https://www.wolfram.com/mathematica/][Mathematica]]
+- GNOME Shell: [[https://github.com/prurigro/gnome-catgen][gnome-catgen]]
 
 To install dependencies on Arch Linux, run:
 
