--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1162,8 +1162,6 @@ steps.
     :ensure t
     :bind
     ("C-c w t" . transpose-frame)
-    :commands
-    (flip-frame flop-frame rotate-frame-clockwise rotate-frame-anticlockwise)
     :preface
     (defun koek-tf/flip (&optional arg)
       "Flip window layout.
@@ -1456,7 +1454,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
 ** eldoc - Show docstring
 #+BEGIN_SRC emacs-lisp
   (use-package eldoc
-    :commands eldoc-mode
+    :defer t
     :delight)
 #+END_SRC
 
