[emacs] Keep helpful buffers alive.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1384,7 +1384,9 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     :bind
     (([remap describe-variable] . helpful-variable)
      ([remap describe-function] . helpful-callable)
-     ([remap describe-key]      . helpful-key)))
+     ([remap describe-key]      . helpful-key))
+    :config
+    (setq helpful-max-buffers nil))
 #+END_SRC
 
 ** info - Info viewer
