[emacs] Fix mode names.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2596,9 +2596,10 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
     (define-advice sql-highlight-product (:after () koek-sql/update-mode-name)
       (setq mode-name
             '(:eval
-              ;; When mode-name is evaluated outside mode line,
-              ;; inhibit-mode-name-delight is truthy
-              (if (or inhibit-mode-name-delight (eq sql-product 'ansi))
+              ;; When mode-name is evaluated during mode line update,
+              ;; inhibit-mode-name-delight is unbound or false
+              (if (or (bound-and-true-p inhibit-mode-name-delight)
+                      (eq sql-product 'ansi))
                   "SQL"
                 (sql-get-product-feature sql-product :name)))))
     :config
@@ -2671,7 +2672,7 @@ Configure Conf mode after Text mode.
         (:after (&rest _args) koek-conf/update-mode-name)
       (setq mode-name
             '(:eval
-              (or (and (not inhibit-mode-name-delight)
+              (or (and (not (bound-and-true-p inhibit-mode-name-delight))
                        (alist-get major-mode koek-conf/mode-names))
                   "Conf")))))
 #+END_SRC
