--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -39,12 +39,15 @@ Declare variables and functions setup by [[file:init.el][init.el]].
     :bind
     ("C-c f f" . dired)
     :config
+    (declare-function dired-hide-details-mode "dired")
+
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
     (setq dired-dwim-target t)
     ;; For switches supported by ls-lisp, see
     ;; `ls-lisp--insert-directory'
-    (setq dired-listing-switches "-lah"))
+    (setq dired-listing-switches "-lah")
+    (add-hook 'dired-mode-hook #'dired-hide-details-mode))
 #+END_SRC
 
 ** Trash
