[emacs] Reorganize DevDocs subjects.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1456,28 +1456,28 @@ On [[https://devdocs.io/][DevDocs]], enable:
     (setq devdocs-subjects
           '(("C" "c")
             ("C++" "cpp")
+            ("OpenJDK" "openjdk~8")
             ("Clojure" "clojure~1.10")
+            ("Erlang" "erlang~21")
+            ("HTML" "html")
             ("CSS" "css")
+            ("JavaScript" "javascript")
             ("DOM" "dom")
             ("DOM Events" "dom_events")
-            ("Erlang" "erlang~21")
-            ("Express" "express")
-            ("HTML" "html")
-            ("JavaScript" "javascript")
             ("jQuery" "jquery")
             ("lodash" "lodash~4")
-            ("Matplotlib" "matplotlib~3.1")
             ("Node.js" "node")
             ("npm" "npm")
-            ("NumPy" "numpy~1.17")
+            ("Express" "express")
             ("Octave" "octave")
-            ("OpenJDK" "openjdk~8")
-            ("pandas" "pandas~0.25")
-            ("PostgreSQL" "postgresql~12")
             ("Python" "python~3.8")
-            ("scikit-image" "scikit_image")
+            ("NumPy" "numpy~1.17")
+            ("pandas" "pandas~0.25")
+            ("StatsModels" "statsmodels")
             ("scikit-learn" "scikit_learn")
-            ("StatsModels" "statsmodels")))
+            ("scikit-image" "scikit_image")
+            ("Matplotlib" "matplotlib~3.1")
+            ("PostgreSQL" "postgresql~12")))
     (devdocs-setup))
 #+END_SRC
 
@@ -2535,12 +2535,12 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
       (:map python-mode-map
        ("C-c d d" . devdocs-lookup-python~3.8)
        ;; C-a, C-m is interpreted as RET
-       ("C-c d C-a" . devdocs-lookup-matplotlib~3.1)
        ("C-c d C-n" . devdocs-lookup-numpy~1.17)
        ("C-c d C-p" . devdocs-lookup-pandas~0.25)
        ("C-c d C-s" . devdocs-lookup-statsmodels)
        ("C-c d C-l" . devdocs-lookup-scikit_learn)
-       ("C-c d C-i" . devdocs-lookup-scikit_image)))
+       ("C-c d C-i" . devdocs-lookup-scikit_image)
+       ("C-c d C-a" . devdocs-lookup-matplotlib~3.1)))
 
     (add-hook 'python-mode-hook #'koek-py/disable-checker)
     :delight (python-mode "Py" :major))
