--- a/README.org
+++ b/README.org
@@ -156,8 +156,8 @@ To install dependencies on Arch Linux, run:
 Run:
 
 #+BEGIN_SRC sh
-  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-left "['']"
-  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-right "['']"
+  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-left "[]"
+  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-right "[]"
   gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-down "['<Super>Page_Down']"
 #+END_SRC
 
