[emacs] Prefer list to backquote.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -87,7 +87,7 @@ Move deleted files to trash.
       "Check spelling of commit message.
   When FORCE is truthy, continue commit unconditionally."
       (let* ((ispell-skip-region-alist    ; Dynamic variable
-              (cons `(,(rx line-start "#") forward-line) ; Single line comment
+              (cons (list (rx line-start "#") #'forward-line) ; Comment
                     ispell-skip-region-alist))
              (tick (buffer-chars-modified-tick))
              (result (ispell-buffer)))
